<resources>
    <string name="app_name">Help Plus</string>
    <string name="login_activity_title">Login/Register</string>
    <string name="login_button">Log in</string>
    <string name="login_window_title">Help+ login</string>
    <string name="login_textbox_1">username</string>
    <string name="login_textbox_1_hint">username</string>
    <string name="login_textbox_2">password</string>
    <string name="login_textbox_2_hint">password</string>
    <string name="login_goto_register">Go to register</string>
    <string name="register_activity_title">Login/Register</string>
    <string name="register_button">Register</string>
    <string name="register_window_title">Help+ register</string>
    <string name="register_textbox_1">username</string>
    <string name="register_textbox_1_hint">username</string>
    <string name="register_textbox_2">password</string>
    <string name="register_textbox_2_hint">password</string>
    <string name="register_goto_login">Back</string>
    <string name="home_activity_title">Home</string>
    <string name="home_button_questions">Intrebari si Situatii</string>
    <string name="home_button_quiz">Quiz-uri</string>
    <string name="home_button_routines">Rutine de Invatare</string>
    <string name="home_button_signout">Sign out</string>
    <string name="profile_activity_title">Profil</string>
    <string name="profile_average_grade">Media notelor:</string>
    <string name="profile_friend_code">Cod unic:</string>
    <string name="profile_button_photo">Adauga/schimba poza de profil</string>
    <string name="profile_button_nick">Seteaza nickname</string>
    <string name="profile_button_friends">Adauga/vezi prieteni</string>
    <string name="profile_button_back">Back</string>
    <string name="profile_text_name"></string>
    <string name="profile_picture_activity_title">Poza de profil</string>
    <string name="profile_picture_goto_profile">Back</string>
    <string name="profile_picture_attach_files">Attach files</string>
    <string name="profile_picture_change_button">CHANGE</string>
    <string name="nickname_activity_title">Nickname</string>
    <string name="nickname_type_it">type new nickname</string>
    <string name="nickname_enter_button">ENTER</string>
    <string name="nickname_text">NICKNAME:\nChange it now!</string>
    <string name="nickname_goto_profile">Back</string>
    <string name="friends_activity_title">Prieteni</string>
    <string name="friends_text">Search friends!\nEnter their code:</string>
    <string name="friends_type_it">type code</string>
    <string name="friends_enter_button">ADD</string>
    <string name="friends_goto_profile">Back</string>
    <string name="friend_page_activity_title">Pofil prieten</string>
    <string name="profile_friend_code_1">Cod unic:</string>
    <string name="profile_text_name_1"></string>
    <string name="profile_average_grade_1">Media notelor:</string>
    <string name="profile_button_back_1">Back</string>
    <string name="questions_activity_title">Intrebari\nSituatii</string>
    <string name="questions_goto_home">Back</string>
    <string name="routines_activity_title">Rutine</string>
    <string name="routines_goto_home">Back</string>
    <string name="quizes_activity_title">Quiz-uri</string>
    <string name="quiz_today_button">QUIZ-UL ZILEI</string>
    <string name="quizes_all_button">TOATE QUIZ-URILE</string>
    <string name="quizes_goto_home">Back</string>
    <string name="quiz_activity_title">Quiz-uri</string>
    <string name="quizes_goto_quizpage">Back</string>
    <string name="question_activity_title">Quiz</string>
    <string name="question_goto_quizes">Back</string>
    <string name="question_text">Intrebare</string>
    <string name="question_score_text">score:0</string>
</resources>