<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    tools:context=".View.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/activityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:gravity="end"
            android:importantForAutofill="no"
            android:text="@string/login_activity_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/activityLine"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="420dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="#cc999999" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/registerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="35dp"
                    android:gravity="center_horizontal"
                    android:text="@string/login_window_title"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/registerUsenameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/login_textbox_1"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/registerUsernameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_textbox_1_hint"
                    android:inputType="textEmailAddress"
                    android:textStyle="italic"
                    android:importantForAutofill="no" />

                <TextView
                    android:id="@+id/registerPasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/login_textbox_2"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/registerPasswordField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login_textbox_2_hint"
                    android:inputType="textPassword"
                    android:textStyle="italic"
                    android:importantForAutofill="no" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="loginAction"
                    android:text="@string/login_button"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/registerResponseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/login_goto_register"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/loginGoToRegisterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/login_goto_register"
                    android:textColor="@color/teal_700"
                    android:onClick="goToRegister" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>