<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    tools:context=".View.FriendPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/activityName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:gravity="end"
            android:importantForAutofill="no"
            android:text="@string/friend_page_activity_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/activityLine2"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="25sp"
                android:layout_weight="0"
                android:gravity="end"
                android:text="@string/profile_friend_code_1" />
        </LinearLayout>

        <ImageView
            android:id="@+id/profileIcon1"
            android:shape="ring"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/usernameText1"
            android:layout_width="match_parent"
            android:textSize="25sp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile_text_name_1" />

        <TextView
            android:id="@+id/gradeText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/profile_average_grade_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <Button
                android:id="@+id/profileBackButton1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:onClick="goToFriendsList"
                android:text="@string/profile_button_back_1"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>