<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgr"
    tools:context=".View.FriendsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/activityName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:gravity="end"
            android:importantForAutofill="no"
            android:text="@string/friends_activity_title"
            android:textSize="18sp" />

        <View
            android:id="@+id/activityLine1"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/friendsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/friends_text"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/text_background"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/friendsText"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/friends_type_it"
                    android:inputType="number" />

                <Button
                    android:id="@+id/friendsEnterButton"
                    android:layout_width="95dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:onClick="addFriends"
                    android:text="@string/friends_enter_button"
                    android:textAllCaps="false"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <TextView
                android:id="@+id/friendsResponseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#1C3A1D"
                android:textSize="25sp"
                android:visibility="invisible" />

            <ScrollView
                android:id="@+id/friendsListView"
                android:layout_width="365dp"
                android:layout_height="282dp"
                android:background="#805E5C5C">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>

            <Button
                android:id="@+id/friendsBackButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:onClick="goToProfile"
                android:text="@string/friends_goto_profile" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>